新增：点赞功能的Ajax实现       User模型增加upvote_or_cancel(self, post)方法
yiyuhao
2017年7月22日 13:47:06

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -19,6 +19,31 @@ a.grey:active {
     text-decoration: none;
 }
 
+/*匿名用户*/
+a.grey-disabled {
+    cursor: not-allowed;
+}
+
+a.grey-disabled:link {
+    color: #999999;
+    text-decoration: none;
+}
+
+a.grey-disabled:visited {
+    color: #999999;
+    text-decoration: none;
+}
+
+a.grey-disabled:hover {
+    color: #999999;
+    text-decoration: none;
+}
+
+a.grey-disabled:active {
+    color: #999999;
+    text-decoration: none;
+}
+
 a.black:link {
     color: #000000;
     text-decoration: none;
@@ -36,6 +61,16 @@ a.black:hover {
 
 a.black:active {
     color: #000000;
+    text-decoration: none;
+}
+
+a.high-light:link {
+    color: #000000;
+    text-decoration: none;
+}
+
+a.high-light:hover {
+    color: #999999;
     text-decoration: none;
 }
 
