修改：查看他人主页时，头像不再改变透明度
yiyuhao
2017年7月22日 14:16:00

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -151,6 +151,18 @@ a.high-light:hover {
     transition-delay: 0.1s;
 }
 
+.effect-avatar-opacity-1 img {
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: transform 0.5s;
+    -webkit-transform: scale3d(0.95, 0.95, 1);
+    transform: scale3d(0.95, 0.95, 1);
+}
+
+.effect-avatar-opacity-1:hover img {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+}
+
 .position-abs-bottom {
     position: absolute;
     top: 0;
