--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
         {% if current_user.can(Permission.WRITE_ARTICLES) %}
             <div class="box-shadow padding-20">
                 <a class="grey" data-toggle="modal" data-target="#writeArticleDialog">
-                    <span class="glyphicon glyphicon-edit"></span>
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                     发表一篇水滴
                 </a>
             </div>
@@ -51,7 +51,7 @@
         });
 
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-        $UPVOTE_ICON = '<span class="glyphicon glyphicon-triangle-top"></span>';
+        $UPVOTE_ICON = '<span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>';
         function ajax_upvote(post_id, elem_a) {
             $.getJSON($SCRIPT_ROOT + '/upvote',
                       {post_id: post_id},
