--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -83,6 +83,10 @@ a.high-light:hover {
     box-shadow: 0 0 3px rgba(129, 129, 129, 0.51);
 }
 
+.padding-5 {
+    padding: 5px;
+}
+
 .padding-20 {
     padding: 20px;
 }
@@ -97,6 +101,10 @@ a.high-light:hover {
     padding-top: 20px;
     padding-bottom: 9px;
     margin: 40px 0 20px;
+}
+
+.font-size-16{
+    font-size: 15px;
 }
 
 /*图片半透明遮罩层*/
