--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #fbfbfb;
+}
+
 /*a标签样式*/
 a.grey:link {
     color: #999999;
@@ -75,12 +79,13 @@ a.high-light:hover {
 }
 
 .box-shadow {
+    background-color: #fbfbfb;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
-    -webkit-box-shadow: 0 0 3px rgba(129, 129, 129, 0.51);
-    -moz-box-shadow: 0 0 3px rgba(129, 129, 129, 0.51);
-    box-shadow: 0 0 3px rgba(129, 129, 129, 0.51);
+    -webkit-box-shadow: 0 0 5px rgba(165, 165, 165, 0.41);
+    -moz-box-shadow: 0 0 5px rgba(165, 165, 165, 0.41);
+    box-shadow: 0 0 5px rgba(165, 165, 165, 0.41);
 }
 
 .padding-5 {
@@ -256,7 +261,7 @@ div.post-body-mask {
     width: 100%;
     height: 50px;
     z-index: 1;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fbfbfb);
 }
 
 p.post-body-link {
