修改：个人主页 封面上移
yiyuhao
2017年7月26日 23:03:06

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -105,7 +105,7 @@ a.high-light:hover {
     position: relative;
     padding-top: 20px;
     padding-bottom: 9px;
-    margin: 40px 0 20px;
+    margin: 0 0 20px;
 }
 
 .font-size-16{
