修改：不分页时不显示分页插件
yiyuhao
2017年7月27日 23:56:27

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
         {% include "post/_posts.html" %}
 
         {# 分页插件 #}
-        {% if pagination %}
+        {% if pagination.has_prev or pagination.has_next %}
             <div>
                 {{ macros.pagination_widget(pagination, 'main.index') }}
             </div>
