新增：关注及粉丝的显示
yiyuhao
2017年7月29日 19:22:48

--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -101,6 +101,9 @@
                         </a>
                     {% endif %}
                 {% endif %}
+                {# 显示关注人数 #}
+                <a class="grey" href="#">关注: {{ user.followed.count() }}</a>
+                <a class="grey" href="#">粉丝: {{ user.followers.count() }}</a>
             </div>
         </div>
     </div>
