新增：用户通过邮箱找回密码功能
修改：！解决了文章插入视频(含有param)标签时，结束标签处理不正确导致评论栏上移至文章div的问题
      登录及注册等表单按钮通通width:100%
      使游客无法看到文章的评论表单

yiyuhao
2017年7月27日 23:56:27

--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -84,9 +84,11 @@
 
         {# 评论栏及分页 #}
         <ul class="posts box-shadow">
-            <li class="comments" id="comments">
-                {{ wtf.quick_form(form) }}
-            </li>
+            {% if not current_user.is_anonymous %}
+                <li class="comments" id="comments">
+                    {{ wtf.quick_form(form) }}
+                </li>
+            {% endif %}
             {% for comment in comments %}
                 <li class="comments" id="{{ comment.comment_id }}">
                     <div class="post-header">
