--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,8 @@
             <br>
             <p>
                 新用户？
-                <a class="grey" href="{{ url_for('auth.register') }}">点击注册</a>
+                <a class="grey" href="{{ url_for('auth.register') }}">点击注册</a>&nbsp;&nbsp;
+                <a class="grey" href="{{ url_for('auth.password_reset_request') }}">忘记密码?</a>
             </p>
         </div>
     </div>
