修改: 修改用户名后会对应修改默认头像       匿名用户登录会正确地跳转至评论锚点了
yiyuhao
2017年8月15日 20:27:27

--- a/app/templates/post/post.html
+++ b/app/templates/post/post.html
@@ -83,9 +83,9 @@
         </ul>
 
         {# 评论栏及分页 #}
-        <ul class="posts box-shadow">
+        <ul class="posts box-shadow" id="comments">
             {% if not current_user.is_anonymous %}
-                <li class="comments" id="comments">
+                <li class="comments">
                     {{ wtf.quick_form(form) }}
                 </li>
             {% endif %}
