修改: 背景颜色还原为白色       写文章的modal框适配不同屏height的算法       主页最新与关注改用strong高亮而非下划线了
yiyuhao
2017年8月19日 11:58:33

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -130,9 +130,10 @@
             else if ((document.body) && (document.body.clientHeight))
                 winHeight = document.body.clientHeight;
             // 响应式
-            if (winHeight > 600)
-                var ckeditor_content_height = winHeight * 0.55;
-            else
+            if (winHeight > 600) {
+                var modalHeight = 200;
+                var ckeditor_content_height = winHeight * 0.55 - modalHeight;
+            } else
                 ckeditor_content_height = winHeight * 0.35;
             CKEDITOR.on('instanceReady', function (e) {
                 var ckeditor_content = document.getElementById('cke_1_contents');
