--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fbfbfb;
+    background-color: #fcfcfc;
 }
 
 /*a标签样式*/
@@ -79,10 +79,10 @@ a.high-light:hover {
 }
 
 .box-shadow {
-    background-color: #fbfbfb;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
+    background-color: #ffffff;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
     -webkit-box-shadow: 0 0 5px rgba(165, 165, 165, 0.41);
     -moz-box-shadow: 0 0 5px rgba(165, 165, 165, 0.41);
     box-shadow: 0 0 5px rgba(165, 165, 165, 0.41);
@@ -266,7 +266,7 @@ div.post-body-mask {
     width: 100%;
     height: 50px;
     z-index: 1;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fbfbfb);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #ffffff);
 }
 
 p.post-body-link {
