--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,13 +8,13 @@
         {% if current_user.can(Permission.WRITE_ARTICLES) %}
             <div class="padding-5">
                 <a class="grey font-size-16" href="{{ url_for('main.show_all') }}">
-                    {% if show_followed %}最新{% else %}<u>最新</u>{% endif %}
+                    {% if show_followed %}最新{% else %}<strong>最新</strong>{% endif %}
                 </a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a class="grey font-size-16" href="{{ url_for('main.show_followed') }}">
-                    {% if show_followed %}<u>关注</u>{% else %}关注{% endif %}
+                    {% if show_followed %}<strong>关注</strong>{% else %}关注{% endif %}
                 </a>&nbsp;&nbsp;|&nbsp;&nbsp;
                 <a class="grey font-size-16" data-toggle="modal" data-target="#writeArticleDialog">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
                     发表一篇水滴
                 </a>
             </div>
